frontend/jTcl/y.output
State 0 conflicts: 1 reduce/reduce
State 25 conflicts: 1 shift/reduce
State 26 conflicts: 4 shift/reduce
State 27 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: %empty
    2      | Program
    3      | Program G_ERROR

    4 Program: %empty
    5        | Program Package
    6        | Program Import
    7        | Program Implement
    8        | Program Doc
    9        | Program Classe
   10        | Program Var
   11        | Program Function
   12        | Program GWords
   13        | Program GEols

   14 Implement: IMPLEMENT_TAG G_WORD

   15 Function: Doc FunctionBlock
   16         | FunctionBlock

   17 FunctionBlock: PROC_TAG MethodCore

   18 Classe: Doc ClasseBlock
   19       | ClasseBlock

   20 ClasseBlock: ClassHeader ClsExtends ClsCore

   21 ClassHeader: CLASS_TAG G_WORD

   22 ClsExtends: OPEN_BRACE Extends CLOSE_BRACE

   23 Extends: EXTENDS_TAG G_WORD
   24        | Extends EXTENDS_TAG G_WORD

   25 ClsCore: OPEN_BRACE SectionPublic CLOSE_BRACE

   26 SectionPublic: %empty
   27              | SectionPublic Method
   28              | SectionPublic Var

   29 Var: Doc VarBlock
   30    | VarBlock

   31 VarBlock: STATIC_TAG VarCore
   32         | VAR_TAG VarCore

   33 VarCore: G_WORD
   34        | G_WORD OPEN_BRACE
   35        | G_WORD G_WORD

   36 Package: PACKAGE_TAG G_WORD G_WORD

   37 Import: IMPORT_TAG OPEN_BRACE GWords CLOSE_BRACE

   38 GWords: G_WORD
   39       | GWords G_WORD

   40 Method: Doc MethodBlock
   41       | MethodBlock

   42 MethodBlock: MethodCore END_CODE
   43            | PUBLIK_TAG MethodCore END_CODE
   44            | PRIVATE_TAG MethodCore END_CODE

   45 MethodCore: G_WORD Params OPEN_BRACE

   46 Doc: DOC_BLOCK

   47 GEols: G_EOL
   48      | GEols G_EOL

   49 Params: OPEN_BRACE
   50       | Params CLOSE_BRACE
   51       | Params G_WORD
   52       | Params G_WORD OPEN_BRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
G_WORD (258) 14 21 23 24 33 34 35 36 38 39 45 51 52
G_ERROR (259) 3
G_EOL (260) 47 48
CLASS_TAG (261) 21
PROC_TAG (262) 17
PRIVATE_TAG (263) 44
PUBLIK_TAG (264) 43
CLOSE_BRACE (265) 22 25 37 50
OPEN_BRACE (266) 22 25 34 37 45 49 52
EXTENDS_TAG (267) 23 24
STATIC_TAG (268) 31
DOC_BLOCK (269) 46
PACKAGE_TAG (270) 36
IMPORT_TAG (271) 37
END_CODE (272) 42 43 44
VAR_TAG (273) 32
IMPLEMENT_TAG (274) 14


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Start (21)
    on left: 1 2 3, on right: 0
Program (22)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 3 5 6 7 8 9 10 11
    12 13
Implement (23)
    on left: 14, on right: 7
Function (24)
    on left: 15 16, on right: 11
FunctionBlock (25)
    on left: 17, on right: 15 16
Classe (26)
    on left: 18 19, on right: 9
ClasseBlock (27)
    on left: 20, on right: 18 19
ClassHeader (28)
    on left: 21, on right: 20
ClsExtends (29)
    on left: 22, on right: 20
Extends (30)
    on left: 23 24, on right: 22 24
ClsCore (31)
    on left: 25, on right: 20
SectionPublic (32)
    on left: 26 27 28, on right: 25 27 28
Var (33)
    on left: 29 30, on right: 10 28
VarBlock (34)
    on left: 31 32, on right: 29 30
VarCore (35)
    on left: 33 34 35, on right: 31 32
Package (36)
    on left: 36, on right: 5
Import (37)
    on left: 37, on right: 6
GWords (38)
    on left: 38 39, on right: 12 37 39
Method (39)
    on left: 40 41, on right: 27
MethodBlock (40)
    on left: 42 43 44, on right: 40 41
MethodCore (41)
    on left: 45, on right: 17 42 43 44
Doc (42)
    on left: 46, on right: 8 15 18 29 40
GEols (43)
    on left: 47 48, on right: 13 48
Params (44)
    on left: 49 50 51 52, on right: 45 50 51 52


State 0

    0 $accept: . Start $end

    $end      reduce using rule 1 (Start)
    $end      [reduce using rule 4 (Program)]
    $default  reduce using rule 4 (Program)

    Start    go to state 1
    Program  go to state 2


State 1

    0 $accept: Start . $end

    $end  shift, and go to state 3


State 2

    2 Start: Program .
    3      | Program . G_ERROR
    5 Program: Program . Package
    6        | Program . Import
    7        | Program . Implement
    8        | Program . Doc
    9        | Program . Classe
   10        | Program . Var
   11        | Program . Function
   12        | Program . GWords
   13        | Program . GEols

    G_WORD         shift, and go to state 4
    G_ERROR        shift, and go to state 5
    G_EOL          shift, and go to state 6
    CLASS_TAG      shift, and go to state 7
    PROC_TAG       shift, and go to state 8
    STATIC_TAG     shift, and go to state 9
    DOC_BLOCK      shift, and go to state 10
    PACKAGE_TAG    shift, and go to state 11
    IMPORT_TAG     shift, and go to state 12
    VAR_TAG        shift, and go to state 13
    IMPLEMENT_TAG  shift, and go to state 14

    $default  reduce using rule 2 (Start)

    Implement      go to state 15
    Function       go to state 16
    FunctionBlock  go to state 17
    Classe         go to state 18
    ClasseBlock    go to state 19
    ClassHeader    go to state 20
    Var            go to state 21
    VarBlock       go to state 22
    Package        go to state 23
    Import         go to state 24
    GWords         go to state 25
    Doc            go to state 26
    GEols          go to state 27


State 3

    0 $accept: Start $end .

    $default  accept


State 4

   38 GWords: G_WORD .

    $default  reduce using rule 38 (GWords)


State 5

    3 Start: Program G_ERROR .

    $default  reduce using rule 3 (Start)


State 6

   47 GEols: G_EOL .

    $default  reduce using rule 47 (GEols)


State 7

   21 ClassHeader: CLASS_TAG . G_WORD

    G_WORD  shift, and go to state 28


State 8

   17 FunctionBlock: PROC_TAG . MethodCore

    G_WORD  shift, and go to state 29

    MethodCore  go to state 30


State 9

   31 VarBlock: STATIC_TAG . VarCore

    G_WORD  shift, and go to state 31

    VarCore  go to state 32


State 10

   46 Doc: DOC_BLOCK .

    $default  reduce using rule 46 (Doc)


State 11

   36 Package: PACKAGE_TAG . G_WORD G_WORD

    G_WORD  shift, and go to state 33


State 12

   37 Import: IMPORT_TAG . OPEN_BRACE GWords CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 34


State 13

   32 VarBlock: VAR_TAG . VarCore

    G_WORD  shift, and go to state 31

    VarCore  go to state 35


State 14

   14 Implement: IMPLEMENT_TAG . G_WORD

    G_WORD  shift, and go to state 36


State 15

    7 Program: Program Implement .

    $default  reduce using rule 7 (Program)


State 16

   11 Program: Program Function .

    $default  reduce using rule 11 (Program)


State 17

   16 Function: FunctionBlock .

    $default  reduce using rule 16 (Function)


State 18

    9 Program: Program Classe .

    $default  reduce using rule 9 (Program)


State 19

   19 Classe: ClasseBlock .

    $default  reduce using rule 19 (Classe)


State 20

   20 ClasseBlock: ClassHeader . ClsExtends ClsCore

    OPEN_BRACE  shift, and go to state 37

    ClsExtends  go to state 38


State 21

   10 Program: Program Var .

    $default  reduce using rule 10 (Program)


State 22

   30 Var: VarBlock .

    $default  reduce using rule 30 (Var)


State 23

    5 Program: Program Package .

    $default  reduce using rule 5 (Program)


State 24

    6 Program: Program Import .

    $default  reduce using rule 6 (Program)


State 25

   12 Program: Program GWords .
   39 GWords: GWords . G_WORD

    G_WORD  shift, and go to state 39

    G_WORD    [reduce using rule 12 (Program)]
    $default  reduce using rule 12 (Program)


State 26

    8 Program: Program Doc .
   15 Function: Doc . FunctionBlock
   18 Classe: Doc . ClasseBlock
   29 Var: Doc . VarBlock

    CLASS_TAG   shift, and go to state 7
    PROC_TAG    shift, and go to state 8
    STATIC_TAG  shift, and go to state 9
    VAR_TAG     shift, and go to state 13

    CLASS_TAG   [reduce using rule 8 (Program)]
    PROC_TAG    [reduce using rule 8 (Program)]
    STATIC_TAG  [reduce using rule 8 (Program)]
    VAR_TAG     [reduce using rule 8 (Program)]
    $default    reduce using rule 8 (Program)

    FunctionBlock  go to state 40
    ClasseBlock    go to state 41
    ClassHeader    go to state 20
    VarBlock       go to state 42


State 27

   13 Program: Program GEols .
   48 GEols: GEols . G_EOL

    G_EOL  shift, and go to state 43

    G_EOL     [reduce using rule 13 (Program)]
    $default  reduce using rule 13 (Program)


State 28

   21 ClassHeader: CLASS_TAG G_WORD .

    $default  reduce using rule 21 (ClassHeader)


State 29

   45 MethodCore: G_WORD . Params OPEN_BRACE

    OPEN_BRACE  shift, and go to state 44

    Params  go to state 45


State 30

   17 FunctionBlock: PROC_TAG MethodCore .

    $default  reduce using rule 17 (FunctionBlock)


State 31

   33 VarCore: G_WORD .
   34        | G_WORD . OPEN_BRACE
   35        | G_WORD . G_WORD

    G_WORD      shift, and go to state 46
    OPEN_BRACE  shift, and go to state 47

    G_WORD    [reduce using rule 33 (VarCore)]
    $default  reduce using rule 33 (VarCore)


State 32

   31 VarBlock: STATIC_TAG VarCore .

    $default  reduce using rule 31 (VarBlock)


State 33

   36 Package: PACKAGE_TAG G_WORD . G_WORD

    G_WORD  shift, and go to state 48


State 34

   37 Import: IMPORT_TAG OPEN_BRACE . GWords CLOSE_BRACE

    G_WORD  shift, and go to state 4

    GWords  go to state 49


State 35

   32 VarBlock: VAR_TAG VarCore .

    $default  reduce using rule 32 (VarBlock)


State 36

   14 Implement: IMPLEMENT_TAG G_WORD .

    $default  reduce using rule 14 (Implement)


State 37

   22 ClsExtends: OPEN_BRACE . Extends CLOSE_BRACE

    EXTENDS_TAG  shift, and go to state 50

    Extends  go to state 51


State 38

   20 ClasseBlock: ClassHeader ClsExtends . ClsCore

    OPEN_BRACE  shift, and go to state 52

    ClsCore  go to state 53


State 39

   39 GWords: GWords G_WORD .

    $default  reduce using rule 39 (GWords)


State 40

   15 Function: Doc FunctionBlock .

    $default  reduce using rule 15 (Function)


State 41

   18 Classe: Doc ClasseBlock .

    $default  reduce using rule 18 (Classe)


State 42

   29 Var: Doc VarBlock .

    $default  reduce using rule 29 (Var)


State 43

   48 GEols: GEols G_EOL .

    $default  reduce using rule 48 (GEols)


State 44

   49 Params: OPEN_BRACE .

    $default  reduce using rule 49 (Params)


State 45

   45 MethodCore: G_WORD Params . OPEN_BRACE
   50 Params: Params . CLOSE_BRACE
   51       | Params . G_WORD
   52       | Params . G_WORD OPEN_BRACE

    G_WORD       shift, and go to state 54
    CLOSE_BRACE  shift, and go to state 55
    OPEN_BRACE   shift, and go to state 56


State 46

   35 VarCore: G_WORD G_WORD .

    $default  reduce using rule 35 (VarCore)


State 47

   34 VarCore: G_WORD OPEN_BRACE .

    $default  reduce using rule 34 (VarCore)


State 48

   36 Package: PACKAGE_TAG G_WORD G_WORD .

    $default  reduce using rule 36 (Package)


State 49

   37 Import: IMPORT_TAG OPEN_BRACE GWords . CLOSE_BRACE
   39 GWords: GWords . G_WORD

    G_WORD       shift, and go to state 39
    CLOSE_BRACE  shift, and go to state 57


State 50

   23 Extends: EXTENDS_TAG . G_WORD

    G_WORD  shift, and go to state 58


State 51

   22 ClsExtends: OPEN_BRACE Extends . CLOSE_BRACE
   24 Extends: Extends . EXTENDS_TAG G_WORD

    CLOSE_BRACE  shift, and go to state 59
    EXTENDS_TAG  shift, and go to state 60


State 52

   25 ClsCore: OPEN_BRACE . SectionPublic CLOSE_BRACE

    $default  reduce using rule 26 (SectionPublic)

    SectionPublic  go to state 61


State 53

   20 ClasseBlock: ClassHeader ClsExtends ClsCore .

    $default  reduce using rule 20 (ClasseBlock)


State 54

   51 Params: Params G_WORD .
   52       | Params G_WORD . OPEN_BRACE

    OPEN_BRACE  shift, and go to state 62

    OPEN_BRACE  [reduce using rule 51 (Params)]
    $default    reduce using rule 51 (Params)


State 55

   50 Params: Params CLOSE_BRACE .

    $default  reduce using rule 50 (Params)


State 56

   45 MethodCore: G_WORD Params OPEN_BRACE .

    $default  reduce using rule 45 (MethodCore)


State 57

   37 Import: IMPORT_TAG OPEN_BRACE GWords CLOSE_BRACE .

    $default  reduce using rule 37 (Import)


State 58

   23 Extends: EXTENDS_TAG G_WORD .

    $default  reduce using rule 23 (Extends)


State 59

   22 ClsExtends: OPEN_BRACE Extends CLOSE_BRACE .

    $default  reduce using rule 22 (ClsExtends)


State 60

   24 Extends: Extends EXTENDS_TAG . G_WORD

    G_WORD  shift, and go to state 63


State 61

   25 ClsCore: OPEN_BRACE SectionPublic . CLOSE_BRACE
   27 SectionPublic: SectionPublic . Method
   28              | SectionPublic . Var

    G_WORD       shift, and go to state 29
    PRIVATE_TAG  shift, and go to state 64
    PUBLIK_TAG   shift, and go to state 65
    CLOSE_BRACE  shift, and go to state 66
    STATIC_TAG   shift, and go to state 9
    DOC_BLOCK    shift, and go to state 10
    VAR_TAG      shift, and go to state 13

    Var          go to state 67
    VarBlock     go to state 22
    Method       go to state 68
    MethodBlock  go to state 69
    MethodCore   go to state 70
    Doc          go to state 71


State 62

   52 Params: Params G_WORD OPEN_BRACE .

    $default  reduce using rule 52 (Params)


State 63

   24 Extends: Extends EXTENDS_TAG G_WORD .

    $default  reduce using rule 24 (Extends)


State 64

   44 MethodBlock: PRIVATE_TAG . MethodCore END_CODE

    G_WORD  shift, and go to state 29

    MethodCore  go to state 72


State 65

   43 MethodBlock: PUBLIK_TAG . MethodCore END_CODE

    G_WORD  shift, and go to state 29

    MethodCore  go to state 73


State 66

   25 ClsCore: OPEN_BRACE SectionPublic CLOSE_BRACE .

    $default  reduce using rule 25 (ClsCore)


State 67

   28 SectionPublic: SectionPublic Var .

    $default  reduce using rule 28 (SectionPublic)


State 68

   27 SectionPublic: SectionPublic Method .

    $default  reduce using rule 27 (SectionPublic)


State 69

   41 Method: MethodBlock .

    $default  reduce using rule 41 (Method)


State 70

   42 MethodBlock: MethodCore . END_CODE

    END_CODE  shift, and go to state 74


State 71

   29 Var: Doc . VarBlock
   40 Method: Doc . MethodBlock

    G_WORD       shift, and go to state 29
    PRIVATE_TAG  shift, and go to state 64
    PUBLIK_TAG   shift, and go to state 65
    STATIC_TAG   shift, and go to state 9
    VAR_TAG      shift, and go to state 13

    VarBlock     go to state 42
    MethodBlock  go to state 75
    MethodCore   go to state 70


State 72

   44 MethodBlock: PRIVATE_TAG MethodCore . END_CODE

    END_CODE  shift, and go to state 76


State 73

   43 MethodBlock: PUBLIK_TAG MethodCore . END_CODE

    END_CODE  shift, and go to state 77


State 74

   42 MethodBlock: MethodCore END_CODE .

    $default  reduce using rule 42 (MethodBlock)


State 75

   40 Method: Doc MethodBlock .

    $default  reduce using rule 40 (Method)


State 76

   44 MethodBlock: PRIVATE_TAG MethodCore END_CODE .

    $default  reduce using rule 44 (MethodBlock)


State 77

   43 MethodBlock: PUBLIK_TAG MethodCore END_CODE .

    $default  reduce using rule 43 (MethodBlock)
